--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
         <title>Меню "Веселий Роджер"</title>
         <style>
                 body {
-                        background-image: url(https://phonoteka.org/9708-piratskij-fon.html);
+                        background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
                         /*url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
+                        ?*https://phonoteka.org/9708-piratskij-fon.html
                         /* Піратська картинка на фоні */
                         /*<img src="img/snooker.jpg" alt="Snooker">*/
                         background-size: cover;
