--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Меню "Веселий Роджер"</title>
         <style>
                 body {
-                        background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+                        background-image: img src = "img/pirate.jpg" 
                         /*url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
                         ?*https://phonoteka.org/9708-piratskij-fon.html
                         /* Піратська картинка на фоні */
